--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,12 @@
         </activity>
         <activity
             android:name=".PreStart"
-            android:label="@string/title_activity_pre_start" >
+            android:label="@string/app_name" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
 
         </activity>
 
@@ -40,6 +45,7 @@
         <activity
             android:name=".preMain"
             android:label="@string/title_activity_pre_main" >
+
         </activity>
         <activity android:name="com.facebook.FacebookActivity"
             android:configChanges=
@@ -49,11 +55,7 @@
         <activity
             android:name=".FacebookLogin"
             android:label="@string/title_activity_facebook_login" >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
     </application>
 
