--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,6 +28,7 @@ dependencies {
     apt 'com.github.hotchemi:permissionsdispatcher:2.0.0'
     compile 'com.android.support:appcompat-v7:24.0.0-alpha2'
     compile 'com.android.support:support-v13:24.0.0-alpha2'
+    compile 'com.android.support:design:24.0.0-alpha2'
     compile 'com.github.hotchemi:permissionsdispatcher:2.0.0'
     compile 'com.loopj.android:android-async-http:1.4.9'
     compile 'com.facebook.android:facebook-android-sdk:4.11.0'
