--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,19 +33,19 @@
                 <action android:name="android.provider.Telephony.SMS_RECEIVED" />
             </intent-filter>
         </receiver>
-        <receiver android:name="peerdelivers.peerdelivery.BootBroadcastReceiver">
+        <receiver android:name=".BootBroadcastReceiver" >
             <intent-filter>
                 <action android:name="android.intent.action.BOOT_COMPLETED" />
             </intent-filter>
         </receiver>
         <receiver
-            android:name="peerdelivers.peerdelivery.MyAlarmReceiver"
-            android:process=":remote"
-            android:enabled="true">
+            android:name=".MyAlarmReceiver"
+            android:enabled="true"
+            android:process=":remote" >
         </receiver>
 
         <service
-            android:name="peerdelivers.peerdelivery.NotifyService"
+            android:name=".NotifyService"
             android:exported="false" />
 
         <activity
@@ -82,6 +82,16 @@
         <meta-data
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
+
+        <activity
+            android:name=".CarrierActivity"
+            android:label="@string/title_activity_carrier"
+            android:theme="@style/MyMaterialTheme" >
+        </activity>
+        <activity
+            android:name=".SettingsActivity"
+            android:label="@string/title_activity_settings" >
+        </activity>
     </application>
 
 </manifest>
