--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,9 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
+    <uses-permission
+        android:name="android.permission.READ_PHONE_STATE" >
+    </uses-permission>
 
     <application
         android:allowBackup="true"
@@ -25,7 +28,8 @@
         </activity>
         <activity
             android:name=".PreStart"
-            android:label="@string/app_name" >
+            android:label="@string/app_name"
+            >
         </activity>
 
         <receiver android:name=".IncomingSms" >
@@ -105,11 +109,10 @@
         </activity>
         <activity
             android:name=".SplashActivity"
-            android:label="@string/title_activity_splash"
+            android:label="Peer Delivery"
             android:theme="@style/MyMaterialTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
